--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -26,7 +26,6 @@
 	grid-column: 1;
 }
 .article-list-item__img {
-	width: 100%;
 	height: 128px;
 	grid-row: 1 / span 2;
 	grid-column: 1;
