--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,7 @@
 	justify-content: center;
 	max-height: 400px;
 	width: 100%;
+	height: min-content;
 	box-sizing: border-box;
 }
 .header.md {
