--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,6 +8,8 @@
 	overflow: hidden;
 	transform: rotateX(90deg);
 	transition: all 0.5s;
+	grid-row: unset;
+	grid-column: unset;
 }
 
 .nav ul {
